--- a/reader.html
+++ b/reader.html
@@ -1,70 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Reader — Classy Femininity</title>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body { height: 100%; font-family: sans-serif; }
-
-    /* Loader overlay */
-    #loader {
-      position: fixed; inset: 0;
-      background: rgba(255,255,255,0.95);
-      display: flex; align-items: center; justify-content: center;
-      z-index: 1000;
-    }
-    .spinner {
-      border: 6px solid #eee;
-      border-top: 6px solid #b20235;
-      border-radius: 50%;
-      width: 48px; height: 48px;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin { to { transform: rotate(360deg); } }
-
-    /* Paywall overlay */
-    #paywall {
-      position: fixed; inset: 0;
-      background: rgba(0,0,0,0.85); color: #fff;
-      display: none; flex-direction: column;
-      align-items: center; justify-content: center;
-      text-align: center; padding: 24px; z-index: 1001;
-    }
-    #paywall button {
-      margin: 12px 6px; padding: 10px 20px;
-      background: #b20235; color: #fff;
-      border: none; border-radius: 4px; cursor: pointer;
-      font-size: 1rem;
-    }
-
-    /* PDF canvas */
-    #canvas { display: block; width: 100%; }
-
-    /* Prev/Next nav */
-    .nav {
-      position: fixed; bottom: 16px; left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255,255,255,0.9);
-      padding: 8px 16px; border-radius: 6px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      display: flex; align-items: center; z-index: 500;
-    }
-    .nav button {
-      margin: 0 8px; padding: 6px 12px;
-      background: #b20235; color: #fff;
-      border: none; border-radius: 4px; cursor: pointer;
-    }
-    .nav span { font-size: 1rem; margin: 0 4px; }
-
-    .error {
-      padding: 24px; text-align: center; color: red;
-    }
+    /* (Your existing CSS: loader, paywall, nav, etc.) */
   </style>
 
   <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+  <!-- Lemon Squeezy overlay JS (no server needed!) -->
+  <script src="https://app.lemonsqueezy.com/js/lemon.js" defer></script>
 </head>
 <body>
   <!-- Loader -->
@@ -72,132 +18,96 @@
 
   <!-- Paywall -->
   <div id="paywall">
-    <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
-    <button id="monthly-btn">Subscribe Monthly</button>
-    <button id="yearly-btn">Subscribe Yearly</button>
+    <p>You’ve reached your free preview (5 pages). Subscribe to continue reading.</p>
+    <!-- Simply link to your hosted checkout URLs -->
+    <a
+      href="https://YOUR-STORE.lemonsqueezy.com/checkout/buy/816280"
+      class="lemonsqueezy-button"
+      id="monthly-btn"
+    >
+      Subscribe Monthly
+    </a>
+    <a
+      href="https://YOUR-STORE.lemonsqueezy.com/checkout/buy/816279"
+      class="lemonsqueezy-button"
+      id="yearly-btn"
+    >
+      Subscribe Yearly
+    </a>
   </div>
 
-  <!-- PDF canvas -->
+  <!-- PDF canvas + nav (unchanged) -->
   <canvas id="canvas"></canvas>
-
-  <!-- Prev/Next nav -->
-  <div class="nav">
-    <button id="prev">◀ Prev</button>
-    <span id="page-num">1</span> / <span id="page-count">?</span>
-    <button id="next">Next ▶</button>
-  </div>
+  <div class="nav">…</div>
 
   <script>
   window.addEventListener('load', () => {
-    // Extract book and subscription flag from URL
+    // 1) If ?subscribed=1 is in URL, mark them unlocked
     const params = new URLSearchParams(location.search);
-    const bookId = params.get('book') || '1';
     if (params.get('subscribed') === '1') {
-      localStorage.setItem('subscribed', 'true');
-      // optionally remove query param
-      history.replaceState(null, '', `reader.html?book=${bookId}`);
+      localStorage.setItem('subscribed','true');
+      history.replaceState(null,'',`reader.html?book=${params.get('book')||1}`);
     }
 
-    // Lemon Squeezy variant IDs
-    const MONTHLY_VARIANT = '816280';
-    const YEARLY_VARIANT  = '816279';
+    // 2) Listen for Lemon Squeezy overlay success event
+    window.addEventListener('Checkout.Success', () => {
+      localStorage.setItem('subscribed','true');
+      document.getElementById('paywall').style.display = 'none';
+      queueRenderPage(pageNum);
+    });
 
-    // Open Lemon Squeezy checkout session
-    async function openLemon(variantId) {
-      try {
-        const res = await fetch(`/api/create-lemon-session?book=${bookId}`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ variantId })
-        });
-        if (!res.ok) throw await res.json();
-        const { url } = await res.json();
-        window.location.href = url;
-      } catch (err) {
-        console.error('Checkout error', err);
-        alert('Unable to start checkout. Please try again.');
-      }
-    }
-
-    document.getElementById('monthly-btn').onclick = () =>
-      openLemon(MONTHLY_VARIANT);
-    document.getElementById('yearly-btn').onclick = () =>
-      openLemon(YEARLY_VARIANT);
-
-    // PDF.js + paywall logic
+    // 3) PDF.js + paywall gating (your existing code)
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
+    const bookId = params.get('book') || '1';
     const pdfUrl = `/ebooks/book-${bookId}.pdf`;
-    const loader = document.getElementById('loader');
-    const paywall = document.getElementById('paywall');
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    const prevBtn = document.getElementById('prev');
-    const nextBtn = document.getElementById('next');
-    const pageNumEl = document.getElementById('page-num');
-    const pageCountEl = document.getElementById('page-count');
+    const loader = document.getElementById('loader'),
+          paywall = document.getElementById('paywall'),
+          canvas = document.getElementById('canvas'),
+          ctx = canvas.getContext('2d'),
+          prev = document.getElementById('prev'),
+          next = document.getElementById('next'),
+          pageNumEl = document.getElementById('page-num'),
+          pageCountEl = document.getElementById('page-count');
 
-    function showLoader(on) {
-      loader.style.display = on ? 'flex' : 'none';
-    }
+    function showLoader(on){ loader.style.display = on?'flex':'none'; }
 
-    fetch(pdfUrl, { method: 'HEAD' })
-      .then(r => {
-        if (!r.ok) throw new Error(`HTTP ${r.status}`);
-        return pdfjsLib.getDocument(pdfUrl).promise;
-      })
-      .then(pdfDoc => {
-        pageCountEl.textContent = pdfDoc.numPages;
+    fetch(pdfUrl, { method:'HEAD' })
+      .then(r => { if(!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
+      .then(pdf => {
+        pageCountEl.textContent = pdf.numPages;
         showLoader(false);
-        initializeViewer(pdfDoc);
+        initializeViewer(pdf);
       })
-      .catch(err => {
-        console.error('PDF load error:', err);
-        showLoader(false);
-        document.body.innerHTML = `<p class="error">
-          Could not load PDF (Book ${bookId}): ${err.message}
-        </p>`;
+      .catch(e => {
+        console.error(e);
+        document.body.innerHTML = `<p class="error">Could not load PDF: ${e.message}</p>`;
       });
 
-    let pageNum = 1, pageIsRendering = false, pageNumPending = null;
-    function initializeViewer(pdfDoc) {
-      function renderPage(num) {
-        if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
-          paywall.style.display = 'flex';
+    let pageNum=1, rendering=false, pending=null;
+    function initializeViewer(pdf) {
+      function render(num) {
+        if(num>5 && localStorage.getItem('subscribed')!=='true') {
+          paywall.style.display='flex';
           return;
         }
-        paywall.style.display = 'none';
-
-        pageIsRendering = true;
-        pdfDoc.getPage(num).then(page => {
-          const vp = page.getViewport({ scale: 1.5 });
-          canvas.height = vp.height;
-          canvas.width  = vp.width;
-          page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
-            pageIsRendering = false;
-            if (pageNumPending !== null) {
-              renderPage(pageNumPending);
-              pageNumPending = null;
-            }
+        paywall.style.display='none';
+        rendering=true;
+        pdf.getPage(num).then(page => {
+          const vp = page.getViewport({ scale:1.5 });
+          canvas.width=vp.width; canvas.height=vp.height;
+          page.render({ canvasContext:ctx, viewport:vp }).promise.then(() => {
+            rendering=false;
+            if(pending!==null) { render(pending); pending=null; }
           });
-          pageNumEl.textContent = num;
+          pageNumEl.textContent=num;
         });
       }
-
-      function queueRenderPage(num) {
-        if (pageIsRendering) pageNumPending = num;
-        else renderPage(num);
-      }
-
-      prevBtn.onclick = () => {
-        if (pageNum > 1) { pageNum--; queueRenderPage(pageNum); }
-      };
-      nextBtn.onclick = () => {
-        if (pageNum < pdfDoc.numPages) { pageNum++; queueRenderPage(pageNum); }
-      };
-
-      renderPage(pageNum);
+      function queue(num){ rendering? pending=num : render(num); }
+      prev.onclick=()=>{ if(pageNum>1){ pageNum--; queue(pageNum); }};
+      next.onclick=()=>{ if(pageNum<parseInt(pageCountEl.textContent)){ pageNum++; queue(pageNum); }};
+      render(pageNum);
     }
   });
   </script>
